# yukon-old

./: .gitignore  .gitmodules  .sonarcloud.properties  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.md  LICENSE.rst  README.md  README.rst  conf.py  demo.sh  noxfile.py  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  sonar-project.properties  test.orc.yaml  tox.ini
.buildkite/: pipeline.release.yml  pipeline.release.yml.template  pipeline.yml  pipeline.yml.template  release.sh
.github/workflows/: main.yaml
backend/: .gitignore  README.md  app.py  requirements.txt  run.py  setup.cfg  setup.py  test.sh
backend/api/: __init__.py  app.py  version.py
backend/api/controllers/nodes/: __init__.py
backend/devserv/: README.md  mock_responses.py
backend/devserv/api/v1/: bus.json  health.json  nodes.json
backend/devserv/api/v1/nodes/: 0.json  grv.json
backend/devserv/api/v1/types/: uavcan.register.Access.Request.1.0.json  uavcan.register.Value.1.0.json
design/: index.md
docs/: index.rst
docs/backend/: api.controllers.nodes.rst  api.controllers.rst  api.rst  devserv.rst  modules.rst  uavcan_node_demo.rst
docs/frontend/: Router.rst  api.rst  components.rst  store.rst  util.rst
dsdl/: README.md
dsdl/org_uavcan_yukon/: MessagePack.0.1.uavcan
dsdl/org_uavcan_yukon/io/frame/: Frame.0.1.uavcan
dsdl/org_uavcan_yukon/io/transfer/: Priority.1.0.uavcan
dsdl/org_uavcan_yukon/presentation/: PortTypeMap.0.1.uavcan
dsdl/org_uavcan_yukon/ui/: Notify.0.1.uavcan  Tag.0.1.uavcan  TaggedWidget.0.1.uavcan  TaggedWindow.0.1.uavcan  Window.0.1.uavcan
dsdl/org_uavcan_yukon/ui/style/: Style.0.1.uavcan
dsdl/org_uavcan_yukon/ui/widget/: Any.0.1.uavcan  Label.0.1.uavcan  Text.0.1.uavcan
frontend/: README.md  index.html  package-lock.json  package.json
frontend/config/: prod.env.js
frontend/src/: App.vue  main.js
frontend/src/api/: ApiRoutes.js  AxiosConfig.js
frontend/src/api/contracts/: index.js
frontend/src/api/contracts/dsdl/: index.js
frontend/src/api/eventsource/: index.js
frontend/src/api/eventsource/handlers/: index.js
frontend/src/assets/styles/: core.css  nodeStatus.css  registers.css
frontend/src/components/: GlobalRegisterView.vue  Home.vue  Spinner.vue
frontend/src/components/BusMonitor/: BusMonitor.vue
frontend/src/components/Dsdl/: TypeEditForm.vue  TypeInput.vue  TypeValue.vue
frontend/src/components/GlobalRegisterView/: GlobalRegisterView.vue  RegisterUpdater.vue  RegisterWorkset.vue
frontend/src/components/Home/: BusInfo.vue  Home.vue  NodeList.vue  PlugAndPlayTable.vue  ServerHealth.vue
frontend/src/components/NodeInfo/: NodeConfigParams.vue  NodeConstants.vue  NodeControls.vue  NodeInfoPage.vue  NodeRegisters.vue
frontend/src/components/Plotter/: Plotter.vue
frontend/src/components/Util/: CopyableText.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: general.js  grv.js  nodes.js  types.js
frontend/src/util/: dsdl.js  usability.js
frontend/test/e2e/specs/: test.js
frontend/test/unit/: jest.conf.js
frontend/test/unit/specs/: CopyableText.spec.js  Home.spec.js  Spinner.spec.js
frontend/test/unit/specs/Home/: NodeList.spec.js  PlugAndPlayTable.spec.js  ServerHealth.spec.js
frontend/test/unit/specs/NodeInfo/: NodeConfigParams.spec.js  NodeControls.spec.js  NodeRegisters.spec.js
frontend/test/unit/specs/Util/: Spinner.spec.js
spec/: swagger.json
src/yukon/backend/: LICENSE.rst  README.md  README.rst  conf.py  conftest.py  requirements.txt  setup.cfg  setup.py
src/yukon/backend/api/: version.py
src/yukon/backend/api/controllers/nodes/: __init__.py
src/yukon/backend/devserv/: mock_responses.py
src/yukon/backend/devserv/api/v1/nodes/: plugandplay.json
src/yukon/backend/devserv/api/v1/nodes/0/: registers.json
src/yukon/backend/devserv/api/v1/types/: uavcan.register.Value.1.0.json
src/yukon/backend/docs/: dev.rst  index.rst
src/yukon/backend/docs/api/: api.rst  devserv.rst  modules.rst
src/yukon/backend/src/: uavcan_node_demo.py
src/yukon/backend/src/api/: app.py  main.py  version.py
src/yukon/backend/src/api/controllers/nodes/: __init__.py
src/yukon/backend/src/devserv/: mock_responses.py  mock_server.py
src/yukon/backend/src/devserv/api/v1/types/: uavcan.register.Access.Request.1.0.json
src/yukon/backend/src/devserv/description/example/: example_sess_description.json  example_sys_description.json
src/yukon/backend/src/devserv/description/template/: sess_description.json  sys_description.json
src/yukon/backend/test/: test_app.py
src/yukon/frontend/: .eslintrc.js  .gitignore  LICENSE.md  README.md  electron.js  index.html  package-lock.json  package.json
src/yukon/frontend/config/: index.js
src/yukon/frontend/src/: App.vue  main.js
src/yukon/frontend/src/Router/: index.js
src/yukon/frontend/src/api/: ApiRoutes.js
src/yukon/frontend/src/api/contracts/: index.js
src/yukon/frontend/src/store/: index.js
src/yukon/frontend/src/util/: dsdl.js
src/yukon/frontend/test/unit/: jest.conf.js
tests/: __init__.py
tests/io/: _spoofer.py  udp.py
yukon/: __init__.py  __main__.py  dcs.py  filesystem.py  transport.py
yukon/dcs/: __init__.py  _logger.py  _node.py
yukon/dcs/_register/: __init__.py  _server.py  _storage.py
yukon/dcs/_registry/: __init__.py  _env_var.py  _primitives.py  _registry.py  _storage.py
yukon/dcs/register/: __init__.py  _env_var.py  _registry.py  _storage.py
yukon/dsdl/org_uavcan_yukon/io/frame/: Capture.0.1.uavcan
yukon/dsdl/org_uavcan_yukon/io/transport/: Payload.1.0.uavcan  Priority.1.0.uavcan  SniffedTransfer.0.1.uavcan  SpoofedTransfer.0.1.uavcan
yukon/dsdl/org_uavcan_yukon/io/worker/: Configuration.0.1.uavcan  Feedback.0.1.uavcan
yukon/dsdl_src/public_unregulated_data_types/org_uavcan_yukon/io/: Config.0.1.uavcan  Status.0.1.uavcan
yukon/head/: __init__.py  _main.py
yukon/io/: __init__.py  __main__.py  _captor.py  _session.py  _spoofer.py  _time.py  _worker.py  udp.py
yukon/io/iface/: __init__.py  udp.py
yukon/io/transport/: __init__.py  udp.py
(+62 files in other folders)
