[project]
name = "yukon"
authors = [
    { name = "UAVCAN Consortium" },
    { email = "consortium@uavcan.org" },
]
version     = "0.0.1"
description = "Rich IDE for developing and maintaining UAVCAN-powered vehicular computing systems."
readme      = "README.md"
license     = "MIT"
keywords = [
    "uavcan",
    "data-bus",
    "ethernet",
    "can-bus",
    "vehicular",
    "onboard-networking",
    "avionics",
    "communication-protocol",
    "utility",
    "gui",
    "ide",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "pyuavcan[transport_udp,transport_serial,transport_can_pythoncan] ~= 1.2",
    "msgpack     ~= 1.0",
    "coloredlogs ~= 15.0",
]
requires-python = ">=3.10"

[project.urls]
homepage    = "https://uavcan.org"
repository  = "https://github.com/UAVCAN/yukon"

[project.gui-scripts]
yukon = "yukon:main"

# -------------------------------------------------- MYPY --------------------------------------------------
[tool.mypy]
warn_return_any         = true
warn_unused_configs     = true
disallow_untyped_defs   = true
check_untyped_defs      = true
no_implicit_optional    = true
warn_redundant_casts    = true
warn_unused_ignores     = true
show_error_context      = true
strict_equality         = true
implicit_reexport       = false
follow_imports          = "silent"  # We don't want MyPy to check compiled DSDLs and their dependencies.
mypy_path = [
    "build/lib/yukon/.compiled"
]

[[tool.mypy.overrides]]
module = [
    "pyuavcan",
    "pyuavcan.*",
    "pydsdl",
    "nunavut",
    "nunavut.*",
    "pytest",
]
ignore_missing_imports = true

# -------------------------------------------------- PYTEST --------------------------------------------------
[tool.pytest.ini_options]
norecursedirs = [
    "yukon/dsdl_src",
    "tests/deps",
]
addopts = "--doctest-modules --color=yes --verbose"
testpaths = [
    "yukon",
    "tests",
]
python_files     = "*.py"
python_functions = "__test_*"

log_cli              = true
log_cli_level        = "WARNING"

log_file             = "pytest.log"
log_file_level       = "DEBUG"
log_file_date_format = "%H:%M:%S"
log_file_format      = "%(asctime)s.%(msecs)03d %(process)07d %(levelname)-3.3s %(name)s: %(message)s"

filterwarnings = [
    "ignore:.*LegacyVersion.*:DeprecationWarning",
]

# -------------------------------------------------- PYLINT --------------------------------------------------
[pylint.MASTER]
fail-under = 9.0

[tool.pylint."MESSAGES CONTROL"]
confidence = "UNDEFINED"
# Advanced semantic analysis is broken in PyLint. These aspects are addressed by MyPy in a more sensible way.
disable = [
    "useless-import-alias",  # This is not useless but indicates re-export; see MyPy "implicit_reexport"
    "import-outside-toplevel",
    "fixme",
    "too-few-public-methods",
    "inconsistent-return-statements",
    "too-many-arguments",
    "import-error",
    "unsubscriptable-object",
    "too-many-statements",
    "too-many-instance-attributes",
    "eval-used",
]

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pylint.DESIGN]
max-branches = 20
max-locals   = 30

[tool.pylint.FORMAT]
max-line-length  = 120
max-module-lines = 3000

[tool.pylint.BASIC]
variable-rgx = "[a-z_][a-z0-9_]*"

[tool.pylint.SIMILARITIES]
min-similarity-lines = 20

# -------------------------------------------------- BLACK --------------------------------------------------
[tool.black]
line-length = 120
target-version = ['py310']
include = '''
(yukon|tests)/.*\.pyi?$
'''
exclude = '''
(/\..*/)|(/dsdl_src/)
'''
