[metadata]
name            = yukon
version         = file: yukon/VERSION
author          = UAVCAN Consortium
author_email    = consortium@uavcan.org
url             = https://uavcan.org
description     = Rich IDE for developing and maintaining UAVCAN-powered vehicular computing systems.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

keywords =
    uavcan
    data-bus
    can-bus
    ethernet
    vehicular
    onboard-networking
    avionics
    communication-protocol
    utility
    gui
    ide

classifiers =
    Intended Audience :: Developers
    Intended Audience :: Customer Service
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Object Brokering
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Topic :: System :: Monitoring
    Topic :: Utilities
    Topic :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Typing :: Typed
    Environment :: GPU

[options]
zip_safe             = False
include_package_data = True
packages             = find:
install_requires =
    pyuavcan[transport_udp,transport_serial,transport_can_pythoncan] ~= 1.1
    ruamel.yaml     <  0.16
    requests        ~= 2.25
    click           ~= 7.1

[options.packages.find]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
include =
    yukon
    yukon.*

[options.entry_points]
gui_scripts =
    yukon = yukon:main

[options.package_data]
* =
        *
       */*
      */*/*
     */*/*/*
    */*/*/*/*

# ---------------------------------------- PYTEST ----------------------------------------
[tool:pytest]
norecursedirs =
    yukon/dsdl_src
    tests/deps
testpaths        = yukon tests
python_files     = *.py
python_classes   = _UnitTest
python_functions = _unittest_
log_level        = DEBUG
log_cli_level    = WARNING
log_cli          = true
log_file         = pytest.log
addopts          = --doctest-modules -v -p no:unraisableexception

# ---------------------------------------- MYPY ----------------------------------------
[mypy]
# Python version is not specified to allow checking against different versions.
warn_return_any        = True
warn_unused_configs    = True
disallow_untyped_defs  = True
check_untyped_defs     = True
no_implicit_optional   = True
warn_redundant_casts   = True
warn_unused_ignores    = True
show_error_context     = True
strict_equality        = True
implicit_reexport      = False
# We don't want MyPy to go checking generated code and its dependencies.
follow_imports         = silent
mypy_path =
    .compiled

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-pydsdl.*]
ignore_missing_imports = True

[mypy-pyuavcan.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True
follow_imports = skip

# ---------------------------------------- COVERAGE ----------------------------------------
[coverage:run]
data_file = .coverage
branch    = True
parallel  = True
source =
    yukon
    tests

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    assert False
    if False:
    if __name__ == .__main__.:

# ---------------------------------------- PYLINT ----------------------------------------
[pylint.MASTER]
fail-under=9.9
jobs=0

[pylint.MESSAGES CONTROL]
# Valid levels: HIGH, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence=UNDEFINED
# Advanced semantic analysis is broken in PyLint so we just disable these checks since they add nothing but noise.
# These aspects are addressed by MyPy in a more sensible way.
disable=
    useless-import-alias,
    f-string-without-interpolation,
    import-outside-toplevel,
    fixme,
    too-few-public-methods,
    inconsistent-return-statements,
    too-many-arguments,
    import-error,
    misplaced-comparison-constant,
    unsubscriptable-object

[pylint.REPORTS]
output-format=colorized

[pylint.DESIGN]
max-branches=20
max-locals=30

[pylint.FORMAT]
max-line-length=120
max-module-lines=3000

[pylint.BASIC]
variable-rgx=[a-z_][a-z0-9_]*
