[metadata]
name            = yukon
version         = file: yukon/VERSION
author          = UAVCAN Consortium
author_email    = consortium@uavcan.org
url             = https://uavcan.org
description     = Rich IDE for developing and maintaining UAVCAN-powered vehicular computing systems
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    uavcan
    data-bus
    ethernet
    can-bus
    vehicular
    onboard-networking
    avionics
    communication-protocol
    utility
    gui
    ide
classifiers =
    Environment :: X11 Applications
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: Customer Service
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Object Brokering
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Topic :: System :: Monitoring
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS

[options]
zip_safe             = False
python_requires      = >=3.10
include_package_data = True
packages             = find_namespace:
install_requires =
    pyuavcan[transport-udp,transport-serial,transport-can-pythoncan] ~= 1.3
    msgpack     ~= 1.0
    coloredlogs ~= 15.0

[options.packages.find]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
include =
    yukon
    yukon.*

[options.package_data]
# jingle bells jingle bells
# jingle all the way
* =
        *
       */*
      */*/*
     */*/*/*
    */*/*/*/*
# oh what fun it is to ride
# in a one-horse open sleigh

[options.entry_points]
gui_scripts =
    yukon = yukon:main
