[metadata]
name = yukon
version = attr: api.__version__
author = UAVCAN Development Team
author_email = uavcan-maintainers@googlegroups.com 
url = https://uavcan.org
description = UAVCAN/Yukon UI tool built with python & vuejs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = uavcan, yukon, backend, api, can, can-bus
classifiers =
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Web Development
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
