[metadata]
name = yukon_backend
version = attr: api.__version__
author = UAVCAN Development Team
author_email = uavcan-maintainers@googlegroups.com 
url = https://uavcan.org
description = UAVCAN Yukon Python backend
long_description = file: README.md
long_description_content_type = text/rst
license = MIT
keywords = uavcan, yukon, backend, api, can, can-bus
classifiers =
    Intended Audience :: Developers
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: JavaScript
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Networking
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
