[metadata]
name = yukon_backend
version = attr: api.__version__
author = UAVCAN Development Team
author_email = uavcan-maintainers@googlegroups.com 
url = https://uavcan.org
description = UAVCAN Yukon Python backend
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.rst
keywords = uavcan, backend, api, can, can-bus, yukon
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: JavaScript
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Networking
    Topic :: Utilities

[options]
package_dir=
    =src
python_requires = >=3.5
zip_safe=False
include_package_data=True
packages=find:
install_requires=
    pyuavcan
    quart
    quart_cors


[options.entry_points]
console_scripts =
    nnvg = api.main:__main__

[options.packages.find]
where=src
